--- a/index.html
+++ b/index.html
@@ -79,17 +79,6 @@
         .dark-theme .history-sidebar {
             background-color: #262626;
         }
-        
-        .tooltip {
-            visibility: hidden;
-            opacity: 0;
-            transition: opacity 0.2s;
-        }
-        
-        .group:hover .tooltip {
-            visibility: visible;
-            opacity: 1;
-        }
 
         /* Notification styles */
         .notification-badge {
@@ -531,7 +520,7 @@
 
     <!-- Footer updated as per user request -->
     <footer class="py-4 text-center text-sm text-gray-500 dark:text-gray-400 mt-auto">
-        Made with ☕ and ❤️ by <a href="https://www.linkedin.com/in/satyaprakashsamal" target="_blank" class="underline hover:text-blue-500 transition-colors duration-200">Satya Prakash Samal</a>
+        Made with ☕ and ❤️ by <a href="https://www.linkedin.com/in/satyaprakashsamal" target="_blank" class="underline hover:text-red transition-colors duration-200">Satya Prakash Samal</a>
     </footer>
 
     <script>
@@ -931,4 +920,5 @@
     </script>
 </body>
 </html>
+
 
