--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
     <!-- Footer updated as per user request -->
     <footer class="py-4 text-center text-sm text-gray-500 dark:text-gray-400 mt-auto">
-        Made with ☕ and ❤️ by <a href="https://www.linkedin.com/in/satyaprakashsamal" target="_blank" class="underline hover:text-red transition-colors duration-200">Satya Prakash Samal</a>
+        Made with ☕ and ❤️ by <a href="https://www.linkedin.com/in/satyaprakashsamal" target="_blank" class="underline hover:text-red-600 transition-colors duration-200">Satya Prakash Samal</a>
     </footer>
 
     <script>
@@ -920,5 +920,3 @@
     </script>
 </body>
 </html>
-
-
